--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,5 +23,8 @@ services:
     image: postgres:13.4-alpine
     env_file:
       - ./env/db.env
-    # volumes:
-    #   - ./postgres-data:/var/lib/postgresql/data
+    volumes:
+      - db:/var/lib/postgresql/data
+
+volumes:
+  db:
