--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,5 +26,17 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4:5.6
+    env_file:
+      - ./env/pgadmin.env
+    ports:
+      - 5050:80
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    depends_on:
+      - db
+
 volumes:
   db:
+  pgadmin:
