--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,16 @@ services:
 
 before_install:
   - echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
+  - apt-get install python-dev
+  - apt-get install libjpeg-dev
+  - apt-get install libjpeg8-dev
+  - apt-get install libpng3
+  - apt-get install libfreetype6-dev
+  - ln -s /usr/lib/i386-linux-gnu/libfreetype.so /usr/lib
+  - ln -s /usr/lib/i386-linux-gnu/libjpeg.so /usr/lib
+  - ln -s /usr/lib/i386-linux-gnu/libz.so /usr/lib
+  - pip install PIL  --allow-unverified PIL --allow-all-external
+  - pip install Pillow
 
 before_script: pip install docker-compose
 
