--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ services:
 
 before_install:
   - echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
-  - sudo apt-get install python-dev
-  - sudo apt-get install libjpeg-dev
-  - sudo apt-get install libjpeg8-dev
-  - sudo apt-get install libpng3
-  - sudo apt-get install libfreetype6-dev
-  - sudo ln -s /usr/lib/i386-linux-gnu/libfreetype.so /usr/lib
-  - sudo ln -s /usr/lib/i386-linux-gnu/libjpeg.so /usr/lib
-  - sudo ln -s /usr/lib/i386-linux-gnu/libz.so /usr/lib
-  - sudo pip install Pillow
+  # - sudo apt-get install python-dev
+  # - sudo apt-get install libjpeg-dev
+  # - sudo apt-get install libjpeg8-dev
+  # - sudo apt-get install libpng3
+  # - sudo apt-get install libfreetype6-dev
+  # - sudo ln -s /usr/lib/i386-linux-gnu/libfreetype.so /usr/lib
+  # - sudo ln -s /usr/lib/i386-linux-gnu/libjpeg.so /usr/lib
+  # - sudo ln -s /usr/lib/i386-linux-gnu/libz.so /usr/lib
+  # - sudo pip install Pillow
 
 before_script: pip install docker-compose
 
